--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "video-dashboard",
+  "name": "video-dashboard-backend",
   "version": "1.0.0",
-  "description": "لوحة تحكم للفيديوهات التعليمية باستخدام Node.js وExpress",
+  "description": "Backend for Video Dashboard project",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "archiver": "^7.0.1",
-    "body-parser": "^2.2.0",
+    "express": "^4.19.2",
+    "mongoose": "^7.6.3",
+    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security",
-    "mongoose": "^8.17.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-azure-ad": "^4.3.5",
+    "body-parser": "^1.20.2"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "license": "MIT"
 }
