--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
