--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DASHBOARD_PASSWORD=055
 LINKS_PAGE_PASSWORD=18
 MONGO_URI=mongodb+srv://laithobidat85:Ll200510601%23@videodashboardcluster.fdif9dz.mongodb.net/video-dashboard?retryWrites=true&w=majority&appName=videoDashboardCluster
+CLIENT_ID=d7113568-1265-4190-89a6-e2c0c98add0f
+TENANT_ID=4bd08ecb-da75-45b0-8f41-5c45cc3dec94
+CLIENT_SECRET=-JC8Q~AuDYQkjoDmkFDTti41NCGuKt7fitwgSbe9
