--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "axios": "^1.7.7",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1",
     "mongoose": "^7.6.3",
     "dotenv": "^16.4.5",
     "cors": "^2.8.5",
