--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "bcryptjs": "^2.4.3",
     "axios": "^1.7.7",
     "multer": "1.4.5-lts.1",
     "mongoose": "^7.6.3",
