--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "bcryptjs": "^2.4.3",
     "axios": "^1.7.7",
+    "helmet": "^7.1.0",
     "multer": "1.4.5-lts.1",
     "mongoose": "^7.6.3",
     "dotenv": "^16.4.5",
