--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "express-session": "^1.17.3"
   },
   "devDependencies": {
